--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
           app = Joshfire.factory.config.app,
           firstTime = true;
 
-      function createListPage( dataSourceId, data, urlObj ) {
+      function createPage( dataSourceId, data, urlObj, articleId ) {
 
-        var $page = $( "#list-page" ),
+        if ( articleId === undefined ) {
+          var $page = $( "#list-page" );
+          // The markup we are going to inject into the content area of the page.
+          var contentMarkup = "<ul data-role='listview'>";
+        } else {
+          var $page = $( "#content-page" );
+          // The markup we are going to inject into the content area of the page.
+          var contentMarkup = "";
+        }
 
             // Get the header for the page.
-            $header = $page.children( ":jqmData(role=header)" ),
+        var $header = $page.children( ":jqmData(role=header)" ),
 
             // Get the content area element for the page.
             $content = $page.children( ":jqmData(role=content)" ),
@@ -28,11 +36,8 @@
             // Get the footer for the page.
             $footer = $page.children( ":jqmData(role=footer)" ),
 
-            // The markup we are going to inject into the content area of the page.
-            listMarkup = "<ul data-role='listview'>";
-
             // The markup we are going to inject into the footer area of the page.
-            footerMarkup = "<div data-role='navbar'><ul>";
+            footerMarkup = "<div data-role='navbar'><ul>",
 
             // Set the options used when changing page.
             options = data.options;
@@ -77,94 +82,11 @@
         }
 
         options.allowSamePageTransition = true;
-        options.transition = "none";
-
-        // Now call changePage() and tell it to switch to the page we just modified.
-        $.mobile.changePage( $page, options );
-
-        // Everything is done but loading the content. Display the spinner.
-        $.mobile.showPageLoadingMsg();
-
-        // Get the items from our dataSource
-        Joshfire.factory.getDataSource( "main" ).children[dataSourceId].find( {}, function ( err, data ) {
-          if ( err ) { console.error( err ); return; }
-
-          // Generate a list item for each item in the category and add it to our markup.
-          for ( var i = 0; i < data.entries.length; i++ ) {
-            listMarkup += "<li><a href='#datasource=" + dataSourceId + "&article=" + i + "' data-icon='grid'>" + data.entries[i].name + "</a></li>";
-          }
-          listMarkup += "</ul>";
-
-          // Inject the category items markup into the content element.
-          $content.html( listMarkup );
-
-          // Enhance the listview we just injected.
-          $content.find( ":jqmData(role=listview)" ).listview();
-
-          $.mobile.hidePageLoadingMsg();
-        });
-      }
-
-      function createArticlePage( dataSourceId, articleId, data, urlObj ) {
-        var $page = $( "#content-page" ),
-
-            // Get the header for the page.
-            $header = $page.children( ":jqmData(role=header)" ),
-
-            // Get the content area element for the page.
-            $content = $page.children( ":jqmData(role=content)" ),
-
-            // Get the footer for the page.
-            $footer = $page.children( ":jqmData(role=footer)" ),
-
-            // The markup we are going to inject into the content area of the page.
-            itemMarkup = "";
-
-            // The markup we are going to inject into the footer area of the page.
-            footerMarkup = "<div data-role='navbar'><ul>";
-
-            // Set the options used when changing page.
-            options = data.options;
-
-        // Empty the content area
-        $content.html( "" );
-
-        // Generate a navbar item for each datasources
-        // and add it to our markup.
-        for ( var i = 0; i < dataSources.length; i++ ) {
-          footerMarkup += "<li><a href='#datasource=" + i + "' data-icon='grid'>" + dataSources[i].name + "</a></li>";
+        if ( articleId === undefined ) {
+          options.transition = "none";
+        } else {
+          options.transition = "slide";
         }
-        footerMarkup += "</ul></div>";
-
-        // Find the h1 element in our header and inject the name of the app into it.
-        $header.find( "h1" ).html( app.name );
-
-        // Inject the footer items markup into the footer element.
-        $footer.html( footerMarkup );
-
-        // Pages are lazily enhanced. We call page() on the page
-        // element to make sure it is always enhanced before we
-        // attempt to enhance the listview markup we just injected.
-        // Subsequent calls to page() are ignored since a page/widget
-        // can only be enhanced once.
-        $page.page();
-
-        $footer.trigger( "create" );
-
-        // Now that the page is enhanced, highilight the good item on the footer.
-        $footer.find( "li:nth-child(" + ( parseInt(dataSourceId, 10) + 1 ) + ") a" ).addClass( "ui-btn-active" );
-
-        // Also, display the loading spinner, while waiting for data
-        $.mobile.showPageLoadingMsg();
-
-        // We don't want the data-url of the page we just modified
-        // to be the url that shows up in the browser's location field,
-        // so set the dataUrl option to the URL for the category
-        // we just loaded.
-        options.dataUrl = urlObj.href;
-
-        options.allowSamePageTransition = true;
-        options.transition = "slide";
 
         // Now call changePage() and tell it to switch to the page we just modified.
         $.mobile.changePage( $page, options );
@@ -176,18 +98,29 @@
         Joshfire.factory.getDataSource( "main" ).children[dataSourceId].find( {}, function ( err, data ) {
           if ( err ) { console.error( err ); return; }
 
-          var item = data.entries[articleId];
+          if ( articleId === undefined ) {
+            // Generate a list item for each item in the category and add it to our markup.
+            for ( var i = 0; i < data.entries.length; i++ ) {
+              contentMarkup += "<li><a href='#datasource=" + dataSourceId + "&article=" + i + "' data-icon='grid'>" + data.entries[i].name + "</a></li>";
+            }
+            contentMarkup += "</ul>";
 
-          // Generate markup for the item
-          if (item) {
-            itemMarkup += "<h1>" + item.name + "</h1><p>" + item.description + "</p>";
+            // Inject the category items markup into the content element.
+            $content.html( contentMarkup );
+
+            // Enhance the listview we just injected.
+            $content.find( ":jqmData(role=listview)" ).listview();
+          } else {
+            var item = data.entries[articleId];
+
+            // Generate markup for the item
+            if (item) {
+              contentMarkup += "<h1>" + item.name + "</h1><p>" + item.description + "</p>";
+            }
+
+            // Inject the category items markup into the content element.
+            $content.html( contentMarkup );
           }
-
-          // Inject the category items markup into the content element.
-          $content.html( itemMarkup );
-
-          // Enhance the listview we just injected.
-          // $content.find( ":jqmData(role=listview)" ).listview();
 
           $.mobile.hidePageLoadingMsg();
         });
@@ -212,9 +145,9 @@
             var articleId = matching[2];
 
             if ( dataSourceId !== undefined && articleId === undefined ) {
-              createListPage( dataSourceId, data, u );
+              createPage( dataSourceId, data, u );
             } else if ( dataSourceId !== undefined ) {
-              createArticlePage( dataSourceId, articleId, data, u );
+              createPage( dataSourceId, data, u, articleId );
             }
           }
 
@@ -226,7 +159,7 @@
           // Let's assume we're launching the application for the first time
           // Building the list page for the first datasource
           // TODO: later, just redirect to /datasource-0 and let the corresponding function handle it
-          createListPage( 0, data, u );
+          createPage( 0, data, u );
 
           e.preventDefault();
         }
