--- a/index.html
+++ b/index.html
@@ -127,8 +127,16 @@
           if ( err ) { console.error( err ); return; }
 
           var outputType = Joshfire.factory.getDataSource( "main" ).children[ dataSourceId ].config.outputType;
+          var staticDS = Joshfire.factory.getDataSource( "main" ).children[ dataSourceId ].name == "Static";
 
-          if ( articleId === undefined ) {
+          if ( staticDS ) {
+            var item = data.entries[0];
+
+            // NOTE: we're erasing the value of this variable.
+            contentMarkup = $( "#staticTemplate" ).render( item );
+
+            $content.html( contentMarkup );
+          } else if ( articleId === undefined ) {
 
             var previousDate = null;
 
@@ -170,13 +178,13 @@
             var item = data.entries[articleId];
 
             if ( item.itemType == "BlogPosting" ) {
-              contentMarkup +=  $( "#blogPostingTemplate" ).render( item );
+              contentMarkup += $( "#blogPostingTemplate" ).render( item );
             } else if ( item.itemType == "ImageObject" ) {
-              contentMarkup +=  $( "#imageObjectTemplate" ).render( item );
+              contentMarkup += $( "#imageObjectTemplate" ).render( item );
             } else if ( item.itemType == "VideoObject" ) {
-              contentMarkup +=  $( "#videoObjectTemplate" ).render( item );
+              contentMarkup += $( "#videoObjectTemplate" ).render( item );
             } else {
-              contentMarkup +=  $( "#genericTemplate" ).render( item );
+              contentMarkup += $( "#genericTemplate" ).render( item );
             }
 
             // Inject the category items markup into the content element
@@ -315,6 +323,11 @@
     <script id="genericTemplate" type="text/x-jsrender">
       <h1>{{:name}}</h1>
       <p>{{:description}}</p>
+    </script>
+
+    <script id="staticTemplate" type="text/x-jsrender">
+      <h1>{{:name}}</h1>
+      {{:articleBody}}
     </script>
   </body>
 </html>
