--- a/index.html
+++ b/index.html
@@ -2,264 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>My App</title>
-    <link rel="stylesheet" href="css/jquery.mobile-1.1.0.css">
-    <script data-joshfire-bootstrap></script>
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="stylesheet" href="css/jquery.mobile.structure-1.1.0.css">
+    <!-- Soon with a hook to jQuery Mobile Themeroller -->
+    <link rel="stylesheet" href="css/jquery.mobile.theme-1.1.0.css">
+    <link rel="stylesheet" href="css/app.css">
+    <script data-joshfire-bootstrap src="http://127.0.0.1:40021/bootstrap/4fd0d89c1fa50e42f400083c/4fd0e33e1fa50e42f4000bbf/phone/"></script>
     <script src="js/jquery.js"></script>
     <script src="js/jsrender.js"></script>
     <script src="js/mediaplayerlib.js"></script>
     <script src="js/jquery.mobile-1.1.0.js"></script>
-    <script>
-      // TODO check Joshfire.factory.config.datasources.main > 0
-
-      var dataSources = Joshfire.factory.getDataSource( "main" ).children,
-          app = Joshfire.factory.config.app,
-          firstLaunch = true;
-
-      document.title = app.name;
-
-      function extractTime( date ) {
-        var currentDate = new Date( date );
-        var hours = currentDate.getHours()
-        var minutes = currentDate.getMinutes()
-
-        if (minutes < 10) {
-          minutes = "0" + minutes;
-        }
-
-        if ( hours > 11 ) {
-          return hours + ":" + minutes + "PM";
-        } else {
-          return hours + ":" + minutes + "AM";
-        }
-      }
-
-      function extractDay( date ) {
-        var currentDate = new Date( date );
-        var monthNames = [ "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December" ];
-        var dayNames = [ "Monday", "Tuesday", "Wednesday", "Thuesday", "Friday", "Saturday", "Sunday" ];
-
-        return dayNames[currentDate.getDay()] + "," + dayNames[currentDate.getMonth()] + " " + currentDate.getDate() + ", " + currentDate.getFullYear();
-      }
-
-      function createPage( dataSourceId, data, urlObj, articleId ) {
-
-        $( "#video-player" ).html( "" );
-
-        if ( articleId === undefined ) {
-          var $page = $( "#list-page" );
-          // The markup we are going to inject into the content area of the page.
-          var contentMarkup = "<ul data-role='listview'>";
-        } else {
-          var $page = $( "#content-page" );
-          // The markup we are going to inject into the content area of the page.
-          var contentMarkup = "";
-        }
-
-            // Get the header for the page.
-        var $header = $page.children( ":jqmData(role=header)" ),
-
-            // Get the content area element for the page.
-            $content = $page.children( ":jqmData(role=content)" ),
-
-            // Get the footer for the page.
-            $footer = $page.children( ":jqmData(role=footer)" ),
-
-            // The markup we are going to inject into the footer area of the page.
-            footerMarkup = "<div data-role='navbar'><ul>",
-
-            // Set the options used when changing page.
-            options = data.options;
-
-        // Empty the content area
-        $content.html( "" );
-
-        var tabs = Joshfire.factory.config.template.options.tabs;
-
-        // Generate a navbar item for each datasources and add it to our markup.
-        for ( var i = 0; i < tabs.length; i++ ) {
-          var name = ( tabs[i] && tabs[i].name ) || dataSources[i].name;
-          var icon = ( tabs[i] && tabs[i].icon ) || "grid"; // TODO: depends of data source type instead
-
-          footerMarkup += "<li><a href='#datasource=" + i + "' data-icon='" + icon + "'>" + name + "</a></li>";
-        }
-        footerMarkup += "</ul></div>";
-
-        // Find the h1 element in our header and inject the name of the app into it.
-        $header.find( "h1" ).html( app.name );
-
-        // Inject the footer items markup into the footer element.
-        $footer.html( footerMarkup );
-
-        // Pages are lazily enhanced. We call page() on the page
-        // element to make sure it is always enhanced before we
-        // attempt to enhance the listview markup we just injected.
-        // Subsequent calls to page() are ignored since a page/widget
-        // can only be enhanced once.
-        $page.page();
-
-        $footer.trigger( "create" );
-
-        // Now that the page is enhanced, highilight the good item on the footer.
-        $footer.find( "li:nth-child(" + ( parseInt(dataSourceId, 10) + 1 ) + ") a" ).addClass( "ui-btn-active" );
-
-        // Also, display the loading spinner, while waiting for data
-        $.mobile.showPageLoadingMsg();
-
-        // We don't want the data-url of the page we just modified
-        // to be the url that shows up in the browser's location field,
-        // so set the dataUrl option to the URL for the category
-        // we just loaded.
-        if (urlObj) {
-          options.dataUrl = urlObj.href;
-        }
-
-        options.allowSamePageTransition = true;
-        if ( articleId === undefined ) {
-          options.transition = "none";
-        } else {
-          options.transition = "slide";
-        }
-
-        // Now call changePage() and tell it to switch to the page we just modified.
-        $.mobile.changePage( $page, options );
-
-        // Everything is done but loading the content. Display the spinner.
-        $.mobile.showPageLoadingMsg();
-
-        // Get the items from our dataSource
-        Joshfire.factory.getDataSource( "main" ).children[ dataSourceId ].find( {}, function ( err, data ) {
-          if ( err ) { console.error( err ); return; }
-
-          var outputType = Joshfire.factory.getDataSource( "main" ).children[ dataSourceId ].config.outputType;
-          var staticDS = Joshfire.factory.getDataSource( "main" ).children[ dataSourceId ].config.db == "static";
-
-          if ( staticDS ) {
-            var item = data.entries[0];
-
-            // NOTE: we're erasing the value of this variable.
-            contentMarkup = $( "#staticTemplate" ).render( item );
-
-            $content.html( contentMarkup );
-          } else if ( articleId === undefined ) {
-
-            var previousDate = null;
-
-            // Generate a list item for each item in the category and add it to our markup.
-            for ( var i = 0; i < data.entries.length; i++ ) {
-
-              // Our item need to be extended to transmit useful information to the template
-              data.entries[i].i = i;
-              data.entries[i].dataSourceId = dataSourceId;
-
-              var extractedDay = extractDay( data.entries[i].datePublished );
-
-              if ( data.entries[i].datePublished ) {
-                if ( previousDate !== extractedDay && outputType == "BlogPosting" ) {
-                  contentMarkup += "<li data-role='list-divider'>" + extractedDay + "</li>";
-                  previousDate = extractedDay;
-                }
-                data.entries[i].datePublished = extractTime(data.entries[i].datePublished);
-              }
-
-              if ( outputType == "BlogPosting" ) {
-                contentMarkup +=  $( "#blogPostingListTemplate" ).render( data.entries[i] );
-              } else if ( outputType == "ImageObject" || outputType == "VideoObject" ) {
-                contentMarkup +=  $( "#mediaObjectListTemplate" ).render( data.entries[i] );
-              } else if ( outputType == "Article/Status" ) {
-                contentMarkup +=  $( "#statusListTemplate" ).render( data.entries[i] );
-              } else {
-                contentMarkup +=  $( "#genericListTemplate" ).render( data.entries[i] );
-              }
-            }
-            contentMarkup += "</ul>";
-
-            // Inject the category items markup into the content element.
-            $content.html( contentMarkup );
-
-            // Enhance the listview we just injected.
-            $content.find( ":jqmData(role=listview)" ).listview();
-          } else {
-            var item = data.entries[articleId];
-
-            if ( item.itemType == "BlogPosting" ) {
-              contentMarkup += $( "#blogPostingTemplate" ).render( item );
-            } else if ( item.itemType == "ImageObject" ) {
-              contentMarkup += $( "#imageObjectTemplate" ).render( item );
-            } else if ( item.itemType == "VideoObject" ) {
-              contentMarkup += $( "#videoObjectTemplate" ).render( item );
-            } else {
-              contentMarkup += $( "#genericTemplate" ).render( item );
-            }
-
-            // Inject the category items markup into the content element
-            // and trigger a create event to enhance the fresh markup.
-            $content.html( contentMarkup ).trigger( 'create' );
-
-            // mediaFactory needs the markup to inserted into the DOM before adding its
-            // own code.
-            if ( item.itemType == "VideoObject" ) {
-              mediaFactory.insert(item, { strategy: "html5" }, 'video-player', function(err) {
-                if (err) console.error(err);
-              });
-            }
-          }
-
-          $.mobile.hidePageLoadingMsg();
-        });
-      }
-
-      // Listen for any attempts to call changePage()
-      $(document).bind( "pagebeforechange", function( e, data ) {
-        console.log( "pagebeforechange" );
-
-        // Change theme of our application
-        // TODO: don't do it each page changing...
-        if ( Joshfire.factory.config.template.options.theme ) {
-          $( "[data-role=page]" ).attr( { "data-theme": Joshfire.factory.config.template.options.theme } );
-        }
-
-        // string = app is asking us to load a page by URL
-        if ( typeof data.toPage === "string" ) {
-          console.log( "Loading ", data.toPage );
-
-          var u = $.mobile.path.parseUrl( data.toPage ),
-              re = /^#datasource/;
-
-          // We only want to handle URLs that request the data for
-          // a specific datasource.
-          if ( u.hash.search(re) !== -1 ) {
-            var matching = u.hash.match(/.*datasource=([0-9]+)(?:&article=([0-9]+))*/);
-            var dataSourceId = matching[1];
-            var articleId = matching[2];
-
-            if ( dataSourceId !== undefined && articleId === undefined ) {
-              createPage( dataSourceId, data, u );
-            } else if ( dataSourceId !== undefined ) {
-              createPage( dataSourceId, data, u, articleId );
-            }
-          }
-
-          e.preventDefault();
-        } else if (firstLaunch) { // first load (loading first page and ???)
-          console.log( "Loading first page" );
-          firstLaunch = false;
-
-          // Let's assume we're launching the application for the first time
-          // Building the list page for the first datasource
-          // TODO: later, just redirect to /datasource-0 and let the corresponding function handle it
-          createPage( 0, data, u );
-
-          e.preventDefault();
-        }
-      });
-    </script>
-    <style>
-      #video-player iframe {
-        max-width: 100% !important;
-      }
-    </style>
+    <script src="js/app.js"></script>
   </head>
   <body>
 
