--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/jquery.mobile.structure-1.2.0.css">
     <link rel="stylesheet" href="css/jquery.mobile.theme-1.2.0.css">
     <link rel="stylesheet" href="css/app.css">
-    <script data-joshfire-bootstrap src="http://preview.joshfireapps.com/bootstrap/4fe437d6b5de770100002a1f/auto/phone/"></script>
+    <script data-joshfire-bootstrap src="http://preview.joshfireapps.com/bootstrap/50c7148e9e55b00200005596/auto/phone/"></script>
     <script src="js/jquery-1.8.2.js"></script>
     <script src="js/jsrender.js"></script>
     <script src="js/mediaplayerlib.js"></script>
@@ -71,8 +71,10 @@
 
     <script id="blogPostingTemplate" type="text/x-jsrender">
       <h1>{{:name}}</h1>
-      <p>{{:description}}</p>
-      <a href="{{:url}}" target="_blank" data-mini="true" data-role="button">Open original article</a>
+      <p>{{:articleBody}}</p>
+      {{if url}}
+        <a href="{{:url}}" target="_blank" data-mini="true" data-role="button">Open original article</a>
+      {{/if}}
     </script>
 
     <script id="imageObjectTemplate" type="text/x-jsrender">
@@ -92,9 +94,5 @@
       <p>{{:description}}</p>
     </script>
 
-    <script id="staticTemplate" type="text/x-jsrender">
-      <h1>{{:name}}</h1>
-      {{:articleBody}}
-    </script>
-  </body>
+    </body>
 </html>
