--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="stylesheet" href="css/jquery.mobile.theme-1.2.0.css">
     <link rel="stylesheet" href="css/jquery.mobile.structure-1.2.0.css">
+    <link rel="stylesheet" href="css/photoswipe.css">
     <link rel="stylesheet" href="css/app.css">
     <script data-joshfire-bootstrap src="http://preview.joshfireapps.com/bootstrap/50c7148e9e55b00200005596/auto/phone/"></script>
     <script src="js/jquery-1.8.2.js"></script>
     <script src="js/jsrender.js"></script>
     <script src="js/mediaplayerlib.js"></script>
     <script src="js/jquery.mobile-1.2.0.js"></script>
+    <script src="js/klass.min.js"></script>
+    <script src="js/code.photoswipe.jquery-3.0.5.min.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body>
@@ -53,6 +56,10 @@
           <p>{{:description}}</p>
         </a>
       </li>
+    </script>
+
+    <script id="imageObjectListTemplate" type="text/x-jsrender">
+      <li><a href="{{:thumbnail[0].contentURL}}" rel="external"><img src="{{:contentURL}}"></a></li>
     </script>
 
     <script id="statusListTemplate" type="text/x-jsrender">
