Improve gallery images
The placeholder is squared and images non squared are better
displayed

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </script>
 
     <script id="imageObjectListTemplate" type="text/x-jsrender">
-      <li><a href="{{:thumbnail[0].contentURL}}" rel="external"><img src="{{:contentURL}}"></a></li>
+      <li><a href="{{:contentURL}}" rel="external" style="background-image: url({{:thumbnail[1].contentURL}})"></a></li>
     </script>
 
     <script id="statusListTemplate" type="text/x-jsrender">
