Integrated load more in list views.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/jquery.mobile.structure-1.2.0.css">
     <link rel="stylesheet" href="css/photoswipe.css">
     <link rel="stylesheet" href="css/app.css">
-    <script data-joshfire-bootstrap src="http://preview.joshfireapps.com/bootstrap/51d33583e3a2930200000049/51d599edd05c280200000015/phone-web/"></script>
+
+    <script data-joshfire-bootstrap src="http://factory.joshfire.com/bootstrap/51d1938a4a33cb020000003a/51de78310b79c60200000006/phone-web/"></script>
     <script src="js/jquery-1.8.2.js"></script>
     <script src="js/jsrender.js"></script>
     <script src="js/mediaplayerlib.js"></script>
