--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div data-role="page" id="content-page" data-add-back-btn="true">
       <div data-role="header" data-position="fixed" data-id="header" data-tap-toggle="false">
         <h1></h1>
-        <a id="share" class="share ui-btn-right" href="#" icon="share" data-iconpos="notext"></a>
+        <a id="share" class="share ui-btn-right" href="#" data-role="button" data-icon="custom-share" data-iconpos="notext"></a>
       </div>
       <div data-role="content" id="content"></div>
       <div data-role="footer" data-position="fixed" data-id="footer" data-tap-toggle="false"></div>
